--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
                     drawSheetName('HealthPercChange', 'SELECT A,B,C,D,E,F,G,H,I,J,K', HealthPercChangeRH);
                     drawSheetName('EduPercChange', 'SELECT A,B,C,D,E,F,G,H,I,J,K', EduPercChangeRH);
                     drawSheetName('MilitaryPercChange', 'SELECT A,B,C,D,E,F,G,H,I,J,K', MilPercChangeRH);
-                    drawSheetName('AveragePercGDP', 'SELECT A,B,C,D', PercGDPRH);
-                    drawSheetName('PercChange15.19', 'SELECT A,B,C,D', HEMPercChange15_19RH);
+                    drawSheetName('AllSpending15', 'SELECT A,B,C,D', AllSpending15RH);
+                    drawSheetName('AllSpending16', 'SELECT A,B,C,D', AllSpending16RH);
+                    drawSheetName('AllSpending17', 'SELECT A,B,C,D', AllSpending17RH);
+                    drawSheetName('AllSpending18', 'SELECT A,B,C,D', AllSpending18RH);
+                    drawSheetName('AllSpending19', 'SELECT A,B,C,D', AllSpending19RH);
+                    drawSheetName('AveragePercGDP', 'SELECT A,B,C,D', AllPercGDPRH);
+                    drawSheetName('PercChange15.19', 'SELECT A,B,C,D', AllPercChange15_19RH);
 
                 } ///drawAllSheets
                 
@@ -124,9 +129,9 @@
                     data.sort({column: 0, desc: true});
 
                     var options = {
-                        title: 'Education Expenditure by Country in Millions (Current USD)',
+                        title: 'Education Expenditure by Country in Billions (Current USD)',
                         titleTextStyle: {fontSize: 18},
-                        vAxis: {title: 'Current Education Expenditure in Millions (current USD)', format: 'currency'},
+                        vAxis: {title: 'Current Education Expenditure in Billions (current USD)', format: 'currency'},
                         hAxis: {title: 'Country'},
                 };
 
@@ -797,8 +802,94 @@
 
                 };//MilPercChangeRH
 
+
+                //Overall Healthcare, Education, and Military Spending in 2015:
+                function AllSpending15RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Overall Healthcare, Education, and Military Spending in 2015',
+                        titleTextStyle: {fontSize: 18},
+                        vAxis: {title: 'Governmental Spending in Billions of Current USD', format: 'currency'},
+                        hAxis: {title: 'Country'},
+                };
+
+                    var chart = new google.visualization.ColumnChart(document.getElementById('all_spending_15_div'));
+                    chart.draw(data, options);
+                } //AllSpending15RH      
+                
+                //Overall Healthcare, Education, and Military Spending in 2016:
+                function AllSpending16RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Overall Healthcare, Education, and Military Spending in 2016',
+                        titleTextStyle: {fontSize: 18},
+                        vAxis: {title: 'Governmental Spending in Billions of Current USD', format: 'currency'},
+                        hAxis: {title: 'Country'},
+                };
+
+                    var chart = new google.visualization.ColumnChart(document.getElementById('all_spending_16_div'));
+                    chart.draw(data, options);
+                } //AllSpending16RH    
+
+                //Overall Healthcare, Education, and Military Spending in 2017:
+                function AllSpending17RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Overall Healthcare, Education, and Military Spending in 2017',
+                        titleTextStyle: {fontSize: 18},
+                        vAxis: {title: 'Governmental Spending in Billions of Current USD', format: 'currency'},
+                        hAxis: {title: 'Country'},
+                };
+
+                    var chart = new google.visualization.ColumnChart(document.getElementById('all_spending_17_div'));
+                    chart.draw(data, options);
+                } //AllSpending17RH 
+
+                //Overall Healthcare, Education, and Military Spending in 2018:
+                function AllSpending18RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Overall Healthcare, Education, and Military Spending in 2018',
+                        titleTextStyle: {fontSize: 18},
+                        vAxis: {title: 'Governmental Spending in Billions of Current USD', format: 'currency'},
+                        hAxis: {title: 'Country'},
+                };
+
+                    var chart = new google.visualization.ColumnChart(document.getElementById('all_spending_18_div'));
+                    chart.draw(data, options);
+                } //AllSpending18RH 
+
+                //Overall Healthcare, Education, and Military Spending in 2019:
+                function AllSpending19RH(response){
+                    checkError(response);
+                    var data = response.getDataTable();
+                    data.sort({column: 0, desc: true});
+
+                    var options = {
+                        title: 'Overall Healthcare, Education, and Military Spending in 2019',
+                        titleTextStyle: {fontSize: 18},
+                        vAxis: {title: 'Governmental Spending in Billions of Current USD', format: 'currency'},
+                        hAxis: {title: 'Country'},
+                };
+
+                    var chart = new google.visualization.ColumnChart(document.getElementById('all_spending_19_div'));
+                    chart.draw(data, options);
+                } //AllSpending19RH                 
+
                 //Comparison of Percent of GDP on Health, Education and Military Spending:
-                function PercGDPRH(response){
+                function AllPercGDPRH(response){
                     checkError(response);
                     var data = response.getDataTable();
                     data.sort({column: 0, desc: true});
@@ -813,12 +904,12 @@
                         hAxis: {title: 'Average Percent of GDP Spent on Healthcare, Education and Military Spending', format: 'percent'},
                     };
 
-                    var chart = new google.visualization.BarChart(document.getElementById('hem_perc_gdp_div'));
+                    var chart = new google.visualization.BarChart(document.getElementById('all_perc_gdp_div'));
                     chart.draw(data, options);
                 } //PercGDPRH
 
                 //Comparison of Percent Change in Expenditures 2015 to 2019:
-                function HEMPercChange15_19RH(response){
+                function AllPercChange15_19RH(response){
                     checkError(response);
                     var data = response.getDataTable();
                     data.sort({column: 0, desc: true});
@@ -830,7 +921,7 @@
                         hAxis: {title: 'Country'},
                 };
 
-                    var chart = new google.visualization.ColumnChart(document.getElementById('hem_perc_change_15_19_div'));
+                    var chart = new google.visualization.ColumnChart(document.getElementById('all_perc_change_15_19_div'));
                     chart.draw(data, options);
                 } //HealthResponseHandler
 
@@ -1067,10 +1158,22 @@
                     <h3 class="section-subheading text-muted">Comparing health, education and military spending.</h3>
                 </div>
                 <br>
-                <div class="text-center" id="hem_perc_gdp_div" style="width: 900px; height: 500px;"></div>
+                <div class="text-center" id="all_spending_15_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <div class="text-center" id="all_spending_16_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <div class="text-center" id="all_spending_17_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <div class="text-center" id="all_spending_18_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <div class="text-center" id="all_spending_19_div" style="width: 900px; height: 500px;"></div>
                 <br>
                 <br>
-                <div class="text-center" id="hem_perc_change_15_19_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <div class="text-center" id="all_perc_gdp_div" style="width: 900px; height: 500px;"></div>
+                <br>
+                <br>
+                <div class="text-center" id="all_perc_change_15_19_div" style="width: 900px; height: 500px;"></div>
                 <div class="row">
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
                 </div>
