--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,8 @@
                     <br>
                     <h4 class="section-heading text-uppercase">GitHub and Zenodo Links</h4>
                     <h3 class="section-subheading text-muted"><a href="https://github.com/e-roberts/Government-Spending">GitHub Respository</h3>
-                    
+                    <h3 class="section-subheading text-muted"><a href="https://e-roberts.github.io/governmental-spending.io/">GitHub Pages Link</h3>
+                    <h3 class="section-subheading text-muted"><a href="https://zenodo.org/record/4572057#.YD3Hb2hKh3g">Zenodo Link</h3>
                 </div>
                 
             </div>
